# innotter

./: .bandit  .env  .gitignore  1.html  Makefile  README.md  pyproject.toml  sandbox.py
docker/: docker-compose.yml
myapp/myapp/: settings.py  urls.py
myapp/page/: admin.py  apps.py  models.py  posts_urls.py  serializer.py  urls.py  views.py
myapp/page/migrations/: 0001_initial.py  0002_alter_page_description.py  0003_remove_post_reply_to_alter_page_description_and_more.py  0004_alter_post_page.py
myapp/page/templates/posts/: create_post.html
myapp/services/: page_service.py  user_service.py
myapp/tests/: test_models.py
myapp/user/: admin.py  apps.py  forms.py  models.py  serializer.py  views.py
myapp/user/migrations/: 0001_initial.py  0002_profile.py
myapp/user/templates/users/: profile.html  register.html
